# guess-the-number

./: CMakeLists.txt  Doxyfile  Jenkinsfile  README.md  main.cpp  mainpage.dox
.github/workflows/: cpp-ci.yml  doxygen.yml
docs/html/: dir_3299b6428254f9d2c84b48e853204c17.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5e45ad891d35aa5ac397da9c42f084e2.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_8c8edcbe681aa67bc40891faf218f6e2.html  doxygen_crawl.html  files.html  globals.html  globals_func.html  index.html  main_8cpp.html  md__r_e_a_d_m_e.html  pages.html
docs/latex/: files.tex  index.tex  main_8cpp.tex  md__r_e_a_d_m_e.tex  refman.tex
src/: main.cpp
Отчётики/: Отчёт Корейбо 1 лаба.docx  Отчёт Корейбо 2 Лаба.docx  Отчёт Корейбо 3 лаба.docx  Отчёт Корейбо 4 лаба.docx
